# flake8-codes

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
flake8_codes/: __init__.py  _cli.py
flake8_codes/_codes/: __init__.py  _adhoc.py  _default.py  _extract.py  _hardcoded.py  _registry.py  _renamed.py
flake8_codes/_plugins/: __init__.py  _discover.py  _plugin.py
tests/: _constants.py  test_codes.py  test_plugins.py
