[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
tag = "v."


[tool.isort]
line_length = 90
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
skip = "venvs/"
not_skip = "__init__.py"
multi_line_output = 5
include_trailing_comma = true

import_heading_stdlib = "built-in"
import_heading_thirdparty = "external"
import_heading_firstparty = "project"
import_heading_localfolder = "app"


[tool.flit.metadata]
module = "flake8_codes"
dist-name = "flake8-codes"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/flake8-codes"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "flake8,plugins,codes,introspection,linter"
requires = ["flake8"]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.flit.metadata.requires-extra]
plugins = [
    "dlint",
    "flake8-2020",
    "flake8-aaa",
    "flake8-absolute-import",
    "flake8-alfred",
    "flake8-annotations-complexity",
    "flake8-bandit",
    "flake8-black",
    "flake8-broken-line",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-coding",
    "flake8-cognitive-complexity",
    "flake8-commas",
    "flake8-comprehensions",
    "flake8-debugger",
    "flake8-django",
    "flake8-docstrings",
    "flake8-eradicate",
    "flake8-executable",
    "flake8-expression-complexity",
    "flake8-fixme",
    "flake8-functions",
    "flake8-future-import",
    "flake8-import-order",
    "flake8-isort",
    "flake8-length",
    "flake8-logging-format",
    "flake8-mock",
    "flake8-mutable",
    "flake8-mypy",
    "flake8-pep3101",
    "flake8-pie",
    "flake8-print",
    "flake8-printf-formatting",
    "flake8-pyi",
    "flake8-pytest-style",
    "flake8-pytest",
    "flake8-quotes",
    "flake8-requirements",
    "flake8-rst-docstrings",
    "flake8-scrapy",
    "flake8-spellcheck",
    "flake8-sql",
    "flake8-strict",
    "flake8-string-format",
    "flake8-tidy-imports",
    "flake8-todo",
    "flake8-use-fstring",
    "flake8-variables-names",
    "mccabe",
    "pandas-vet",
    "pep8-naming",
    "pylint",
    "wemake-python-styleguide",
]
dev = [
    "isort",
    "mypy",
    "pytest",
]
